Refactored random color function, so now it returns RGB format value not HEX, with it we can changes background opacity without changing it on borders
Added darkens effect

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <button id="popup">Button</button>
+        <button id="popup">Call prompt</button>
     </div>
     <div class="container">
     </div>
